# dvc-use-case

./: README.md  pyproject.toml
.dvc/: config
data/prepared/: test.csv  test.csv.dvc  train.csv  train.csv.dvc
model/: model.joblib  model.joblib.dvc
src/: prepare.py  train.py
